--- a/package.json
+++ b/package.json
@@ -4,8 +4,23 @@
   "description": "Data strcutures implemented in javascript",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "test": "jest --config jest.config.json",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json"
   },
   "author": "Florida Elago <florida.elago@gmail.com> (floridaelago.com)",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.6",
+    "ts-jest": "^29.0.5",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^5.0.2"
+  },
+  "files": [
+    "lib/**/*"
+  ]
 }
